# llm-infer-kernels

./: .clang-format  .editorconfig  .gitignore  LICENSE  README.md
benchmarks/: run_all.sh
cuda/: CMakeLists.txt
cuda/common/: cuda_utils.cuh  utils.cuh
cuda/elementwise/: CMakeLists.txt  README.md  add.cu
cuda/flash_attention/: README.md  fa_naive.cu  fa_tiled.cu
cuda/gemv/: README.md  gemv.cu
cuda/layernorm/: README.md  layernorm.cu
cuda/reduce/: CMakeLists.txt  README.md  build.sh
cuda/reduce/include/: reduce_config.cuh
cuda/reduce/max/: README.md  reduce_max.cu
cuda/reduce/softmax/: README.md  softmax.cu
cuda/reduce/softmax_matrix/: README.md  softmax_matrix.cu
cuda/reduce/sum/: README.md  reduce_sum.cu
cuda/rmsnorm/: README.md  rmsnorm.cu  rmsnorm_naive.cu  rmsnorm_shared.cu
cuda/rope/: README.md  rope_naive.cu
cuda/sgemm/: README.md  kernel1_naive.cu  kernel2_shared.cu  kernel3_double_buffer.cu  sgemm.cu
cuda/sgemm/tools/: plot.py
cuda/softmax/: README.md
cuda/transpose/: README.md  transpose.cu
docs/: profiling-notes.md
triton/: flash_attention.py  rmsnorm.py  rope.py
